--- a/package.json
+++ b/package.json
@@ -1,45 +1,50 @@
 {
-  "name": "leave-balance",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "@types/jest": "^24.0.0",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
-    "body-parser": "^1.19.0",
-    "express": "^4.17.1",
-    "morgan": "^1.9.1",
-    "passport": "^0.4.1",
-    "passport-google-oauth": "^2.0.0",
-    "query-string": "^6.9.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-router-dom": "^5.1.2",
-    "typescript": "~3.7.2"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+    "name": "leave-balance",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@babel/core": "^7.7.7",
+        "@babel/preset-env": "^7.7.7",
+        "@babel/preset-react": "^7.7.4",
+        "@testing-library/jest-dom": "^4.2.4",
+        "@testing-library/react": "^9.3.2",
+        "@testing-library/user-event": "^7.1.2",
+        "@types/jest": "^24.0.0",
+        "@types/node": "^12.0.0",
+        "@types/react": "^16.9.0",
+        "@types/react-dom": "^16.9.0",
+        "@types/react-router-dom": "^5.1.3",
+        "babel-loader": "^8.0.6",
+        "body-parser": "^1.19.0",
+        "express": "^4.17.1",
+        "morgan": "^1.9.1",
+        "passport": "^0.4.1",
+        "passport-google-oauth": "^2.0.0",
+        "path": "^0.12.7",
+        "query-string": "^6.9.0",
+        "react": "^16.12.0",
+        "react-dom": "^16.12.0",
+        "react-router-dom": "^5.1.2",
+        "typescript": "~3.7.2"
+    },
+    "scripts": {
+        "start": "node src/index.js",
+        "build": "yarn clean-dist && webpack --mode development --watch",
+        "build-once": "yarn clean-dist && webpack --mode development",
+        "prod": "webpack --mode production",
+        "clean-dist": "rm -rf dist"
+    },
+    "devDependencies": {
+        "autoprefixer-loader": "^3.2.0",
+        "awesome-typescript-loader": "^5.2.1",
+        "css-loader": "^3.4.1",
+        "file-loader": "^5.0.2",
+        "postcss-loader": "^3.0.0",
+        "prop-types": "^15.7.2",
+        "sass-loader": "^8.0.0",
+        "style-loader": "^1.1.2",
+        "url-loader": "^3.0.0",
+        "webpack": "^4.41.5",
+        "webpack-cli": "^3.3.10"
+    }
 }
