--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@types/react-router-dom": "^5.1.3",
         "babel-loader": "^8.0.6",
         "body-parser": "^1.19.0",
+        "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "morgan": "^1.9.1",
         "passport": "^0.4.1",
